--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="./assets/main.js"></script>
 </head>
 
 <body>
@@ -38,21 +39,21 @@
         <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
           <div class="sm:text-center lg:text-left">
             <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-              <span class="block xl:inline">Paul Atraides</span>
-              <span class="block text-indigo-600 xl:inline">@BossArrakis</span>
+              <span class="block xl:inline">Locura por la lectura</span>
+              <span class="block text-indigo-600 xl:inline">@ChaniRead</span>
             </h1>
             <p
               class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-              Fue el último Duque de la Casa Atreides, líder de los Fremen y primer gobernante del Imperio Atreides,
-              Paul fue considerado el Kwisatz Haderach: el poderoso ser profético, buscado durante mucho tiempo
-              por el Bene Gesserit y producto de su prolongado programa genético. Tambien llamado Paul Muad'Dib</p>
+              Nace Locura de la lectura. Um blog creado y dedicado por y para los libros. Libros de poesía, libros de humor,
+              libros de historía, libros de arte, libros de fantasía, libros de noche, libros de día, libros, libros y más libros.
+              Encontrarás noticias, novedades, clásicos, de bolsillo, recomendados y mucho más.</p>
           </div>
         </main>
       </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
-        src="./assets/pics/paulAtreides.png" alt="">
+        src="./assets/pics/lectura.png" alt="">
     </div>
   </div>
   <div class="bg-white">
